--- a/src/index.html
+++ b/src/index.html
@@ -93,5 +93,23 @@
 			</div>
 		</div>
 	</div>
+	<div class="consultation">
+		<div class="container">
+			<h2 class="title title_left">
+				Получите бесплатную консультацию <br>
+				по подбору пульсометра 
+			</h2>
+			<div class="consultation__descr">
+				Просто заполните форму заявки <br>
+				и мы перезвоним вам в течении 10 минут
+			</div>
+			<form class="feed-form" action="#">
+				<input name="name" required type="text" placeholder="Ваше имя">
+				<input name="phone" required type="number" placeholder="Ваш телефон">
+				<input name="email" required type="email" placeholder="Ваш E-mail">
+				<button class="btn btn_submit">заказать консультацию</button>
+			</form>
+		</div>
+	</div>
 </body>
 </html>
