--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,11 @@
 	<link rel="stylesheet" href="css/bootstrap-reboot.min.css">
 	<!-- <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon"> -->
 	<link rel="stylesheet" href="css/font.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/tiny-slider.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<div class="promo">
+	<section class="promo">
 		<div class="container">
 			<header class="header">
 				<a href="#" class="header__logo">
@@ -52,9 +53,9 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</section>
 
-	<div class="advantages">
+	<section class="advantages">
 		<div class="container">
 			<h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2>
 			<div class="advantages__wrapper">
@@ -92,8 +93,8 @@
 				</div>
 			</div>
 		</div>
-	</div>
-	<div class="consultation">
+	</section>
+	<section class="consultation">
 		<div class="container">
 			<h2 class="title title_left">
 				Получите бесплатную консультацию <br>
@@ -110,6 +111,31 @@
 				<button class="btn btn_submit">заказать консультацию</button>
 			</form>
 		</div>
-	</div>
+	</section>
+	<section class="carousel">
+		<div class="container">
+			<div class="carousel__inner">
+				<div>
+					<img src="img/polar.jpg" alt="slide">
+				</div>
+				<div>
+					<img src="img/polar2.jpg" alt="slide 2">
+				</div>
+				<div>
+					<img src="img/polar3.jpg" alt="slide 3">
+				</div>
+			</div>
+			<button type="button" class="prev">
+				<img src="icons/left.png">
+			</button>
+			<button type="button" class="next">
+				<img src="icons/right.png">
+			</button>
+		</div>
+	</section>
+
+	
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
+	<script src="js/script.js"></script>
 </body>
 </html>
