--- a/src/index.html
+++ b/src/index.html
@@ -134,8 +134,347 @@
 		</div>
 	</section>
 
+	<section class="catalog">
+		<div class="container">
+			<h2 class="title">Каталог пульсометров</h2>
+			<ul class="catalog__tabs">
+				<li class="catalog__tab catalog__tab_active">
+					<div>
+						Для фитнеса
+					</div>
+				</li>
+				<li class="catalog__tab">
+					<div>
+						Для бега
+					</div>
+				</li>
+				<li class="catalog__tab">
+					<div>
+						Для триатлона
+					</div>
+				</li>
+			</ul>
+			<div class="catalog__content catalog__content_active">		
+				<div class="catalog-item">
+					<div class="catalog-item__wrapper">
+						<div class="catalog-item__content catalog-item__content_active">
+							<img class="catalog-item__img" src="img/catalog.jpg" alt="pulsometr">
+							<div class="catalog-item__subtitle">
+								Пульсометр Polar FT1
+							</div>
+							<div class="catalog-item__descr">
+								Для первых шагов в тренировках, 
+								основанных на сердечном ритме
+							</div>
+							<a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+						</div>
+						<ul class="catalog-item__list">
+							<li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+							<li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+							<li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+							<li>Вы сможете посмотреть данные по 10 тренировкам.</li>	
+							<a href="#" class="catalog-item__back">назад</a>
+						</ul>
+					</div>
+					<hr>
+					<div class="catalog-item__footer">
+						<div class="catalog-item__prices">
+							<div class="catalog-item__old-price">
+								4750 руб.
+							</div>
+							<div class="catalog-item__price">
+								4500 руб.
+							</div>
+						</div>
+						<button class="btn btn_mini">КУПИТЬ</button>
+					</div>
+				</div>
+
+				<div class="catalog-item">
+					<div class="catalog-item__wrapper">
+						<div class="catalog-item__content catalog-item__content_active">
+							<img class="catalog-item__img" src="img/catalog.jpg" alt="pulsometr">
+							<div class="catalog-item__subtitle">
+								Пульсометр Suunto M2
+							</div>
+							<div class="catalog-item__descr">
+								Пульсометр начального уровня с комфортным тканевым ремешком
+							</div>
+							<a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+						</div>
+						<ul class="catalog-item__list">
+							<li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+							<li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+							<li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+							<li>Вы сможете посмотреть данные по 10 тренировкам.</li>	
+							<a href="#" class="catalog-item__back">назад</a>
+						</ul>
+					</div>
+					<hr>
+					<div class="catalog-item__footer">
+						<div class="catalog-item__prices">
+							<div class="catalog-item__old-price">
+								6 990 руб.
+							</div>
+							<div class="catalog-item__price">
+								6 641 руб.
+							</div>
+						</div>
+						<button class="btn btn_mini">КУПИТЬ</button>
+					</div>
+				</div>
+
+				<div class="catalog-item">
+					<div class="catalog-item__wrapper">
+						<div class="catalog-item__content catalog-item__content_active">
+							<img class="catalog-item__img" src="img/catalog.jpg" alt="pulsometr">
+							<div class="catalog-item__subtitle">
+								Пульсометр Polar FT4
+							</div>
+							<div class="catalog-item__descr">
+								Улучшенная версия Polar FT1, имеющая следующие улучшения:
+							</div>
+							<a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+						</div>
+						<ul class="catalog-item__list">
+							<li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+							<li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+							<li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+							<li>Вы сможете посмотреть данные по 10 тренировкам.</li>	
+							<a href="#" class="catalog-item__back">назад</a>
+						</ul>
+					</div>
+					<hr>
+					<div class="catalog-item__footer">
+						<div class="catalog-item__prices">
+							<div class="catalog-item__old-price">
+								7 390 руб.
+							</div>
+							<div class="catalog-item__price">
+								7 021 руб.
+							</div>
+						</div>
+						<button class="btn btn_mini">КУПИТЬ</button>
+					</div>
+				</div>
+
+				<div class="catalog-item">
+					<div class="catalog-item__wrapper">
+						<div class="catalog-item__content catalog-item__content_active">
+							<img class="catalog-item__img" src="img/catalog.jpg" alt="pulsometr">
+							<div class="catalog-item__subtitle">
+								Пульсометр Polar FT1
+							</div>
+							<div class="catalog-item__descr">
+								Для первых шагов в тренировках, 
+								основанных на сердечном ритме
+							</div>
+							<a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+						</div>
+						<ul class="catalog-item__list">
+							<li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+							<li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+							<li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+							<li>Вы сможете посмотреть данные по 10 тренировкам.</li>	
+							<a href="#" class="catalog-item__back">назад</a>
+						</ul>
+					</div>
+					<hr>
+					<div class="catalog-item__footer">
+						<div class="catalog-item__prices">
+							<div class="catalog-item__old-price">
+								4750 руб.
+							</div>
+							<div class="catalog-item__price">
+								4500 руб.
+							</div>
+						</div>
+						<button class="btn btn_mini">КУПИТЬ</button>
+					</div>
+				</div>
+
+				<div class="catalog-item">
+					<div class="catalog-item__wrapper">
+						<div class="catalog-item__content catalog-item__content_active">
+							<img class="catalog-item__img" src="img/catalog.jpg" alt="pulsometr">
+							<div class="catalog-item__subtitle">
+								Пульсометр Suunto M2
+							</div>
+							<div class="catalog-item__descr">
+								Пульсометр начального уровня с комфортным тканевым ремешком
+							</div>
+							<a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+						</div>
+						<ul class="catalog-item__list">
+							<li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+							<li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+							<li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+							<li>Вы сможете посмотреть данные по 10 тренировкам.</li>	
+							<a href="#" class="catalog-item__back">назад</a>
+						</ul>
+					</div>
+					<hr>
+					<div class="catalog-item__footer">
+						<div class="catalog-item__prices">
+							<div class="catalog-item__old-price">
+								6 990 руб.
+							</div>
+							<div class="catalog-item__price">
+								6 641 руб.
+							</div>
+						</div>
+						<button class="btn btn_mini">КУПИТЬ</button>
+					</div>
+				</div>
+
+				<div class="catalog-item">
+					<div class="catalog-item__wrapper">
+						<div class="catalog-item__content catalog-item__content_active">
+							<img class="catalog-item__img" src="img/catalog.jpg" alt="pulsometr">
+							<div class="catalog-item__subtitle">
+								Пульсометр Polar FT4
+							</div>
+							<div class="catalog-item__descr">
+								Улучшенная версия Polar FT1, имеющая следующие улучшения:
+							</div>
+							<a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+						</div>
+						<ul class="catalog-item__list">
+							<li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+							<li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+							<li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+							<li>Вы сможете посмотреть данные по 10 тренировкам.</li>	
+							<a href="#" class="catalog-item__back">назад</a>
+						</ul>
+					</div>
+					<hr>
+					<div class="catalog-item__footer">
+						<div class="catalog-item__prices">
+							<div class="catalog-item__old-price">
+								7 390 руб.
+							</div>
+							<div class="catalog-item__price">
+								7 021 руб.
+							</div>
+						</div>
+						<button class="btn btn_mini">КУПИТЬ</button>
+					</div>
+				</div>	
+			</div>
+
+			<div class="catalog__content">
+				<div class="catalog-item">
+					<div class="catalog-item__wrapper">
+						<div class="catalog-item__content catalog-item__content_active">
+							<img class="catalog-item__img" src="img/catalog.jpg" alt="pulsometr">
+							<div class="catalog-item__subtitle">
+								Пульсометр Suunto M2
+							</div>
+							<div class="catalog-item__descr">
+								Пульсометр начального уровня с комфортным тканевым ремешком
+							</div>
+							<a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+						</div>
+						<ul class="catalog-item__list">
+							<li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+							<li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+							<li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+							<li>Вы сможете посмотреть данные по 10 тренировкам.</li>	
+							<a href="#" class="catalog-item__back">назад</a>
+						</ul>
+					</div>
+					<hr>
+					<div class="catalog-item__footer">
+						<div class="catalog-item__prices">
+							<div class="catalog-item__old-price">
+								6 990 руб.
+							</div>
+							<div class="catalog-item__price">
+								6 641 руб.
+							</div>
+						</div>
+						<button class="btn btn_mini">КУПИТЬ</button>
+					</div>
+				</div>
+			</div>
+
+			<div class="catalog__content">
+				<div class="catalog-item">
+					<div class="catalog-item__wrapper">
+						<div class="catalog-item__content catalog-item__content_active">
+							<img class="catalog-item__img" src="img/catalog.jpg" alt="pulsometr">
+							<div class="catalog-item__subtitle">
+								Пульсометр Polar FT4
+							</div>
+							<div class="catalog-item__descr">
+								Улучшенная версия Polar FT1, имеющая следующие улучшения:
+							</div>
+							<a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+						</div>
+						<ul class="catalog-item__list">
+							<li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+							<li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+							<li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+							<li>Вы сможете посмотреть данные по 10 тренировкам.</li>	
+							<a href="#" class="catalog-item__back">назад</a>
+						</ul>
+					</div>
+					<hr>
+					<div class="catalog-item__footer">
+						<div class="catalog-item__prices">
+							<div class="catalog-item__old-price">
+								7 390 руб.
+							</div>
+							<div class="catalog-item__price">
+								7 021 руб.
+							</div>
+						</div>
+						<button class="btn btn_mini">КУПИТЬ</button>
+					</div>
+				</div>
+
+				<div class="catalog-item">
+					<div class="catalog-item__wrapper">
+						<div class="catalog-item__content catalog-item__content_active">
+							<img class="catalog-item__img" src="img/catalog.jpg" alt="pulsometr">
+							<div class="catalog-item__subtitle">
+							    Пульсометр Suunto M2
+							</div>
+							<div class="catalog-item__descr">
+								Пульсометр начального уровня с комфортным тканевым ремешком
+							</div>
+							<a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
+						</div>
+						<ul class="catalog-item__list">
+							<li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+							<li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+							<li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+							<li>Вы сможете посмотреть данные по 10 тренировкам.</li>	
+							<a href="#" class="catalog-item__back">назад</a>
+						</ul>
+					</div>
+					<hr>
+					<div class="catalog-item__footer">
+						<div class="catalog-item__prices">
+							<div class="catalog-item__old-price">
+								6 990 руб.
+							</div>
+							<div class="catalog-item__price">
+								6 641 руб.
+							</div>
+						</div>
+						<button class="btn btn_mini">КУПИТЬ</button>
+					</div>
+				</div>
+			</div>
+
+		</div>
+	</section>
+
 	
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="js/script.js"></script>
 </body>
 </html>
+
