--- a/src/index.html
+++ b/src/index.html
@@ -471,6 +471,75 @@
 		</div>
 	</section>
 
+	<section class="reviews">
+		<div class="container">
+			<h2 class="title">отзывы клиентов</h2>
+			
+			<div class="reviews__item">
+				<img class="reviews__img" src="img/reviews/1.png" alt="Ирина Иванченко">
+				<div class="reviews__text">
+					<div class="reviews__header">Ирина Иванченко</div>
+					<div class="reviews__count">2 полумарафона</div>
+					<div class="reviews__descr">
+						Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали пульсометр, который подошёл именно под мои цели и финансовые возможности. <br>
+						Через некоторое время решила обновить гаджет - не раздумывая обратилась туда же.
+						<br><br>
+						Новые цели - новый гаджет!
+						<br><br>
+						Спасибо, RunSmart! 
+					</div>	
+				</div>
+			</div>
+
+			<div class="reviews__item">
+				<img class="reviews__img" src="img/reviews/2.png" alt="Иван Сёмочкин">
+				<div class="reviews__text">
+					<div class="reviews__header">Иван Сёмочкин</div>
+					<div class="reviews__count">1 полумарафон</div>
+					<div class="reviews__descr">
+						Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе делал. 
+						Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели первую тренировку, научили пользоваться новым гаджетом. Также объяснили основы анатомии, составили план тренировок на месяц вперёд.
+						<br><br>
+						С ними подготовился к своему первому полумарафону! Спасибо!!!
+					</div>
+				</div>
+			</div>
+
+			<div class="reviews__item">
+				<img class="reviews__img" src="img/reviews/3.png" alt="Юлия Дашкина">
+				<div class="reviews__text">
+					<div class="reviews__header">Юлия Дашкина</div>
+					<div class="reviews__count">2 полумарафона</div>
+					<div class="reviews__descr">
+						Долго не могла начать бегать, т.к. до этого несколько раз начинала, но становилось тяжело и я бросала. От друзей услышала о RunSmart и о беге с контролем пульса и решила попробовать.
+						<br><br>
+						Позвонила, ребята поинтересовались моими целями и подобрали очень интересный вариант со скидкой! Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2 полумарафона и несколько более коротких забегов и не намерена останавливаться!
+						<br><br>
+						Спасибо!!!
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<footer class="footer">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1413.8731480968866!2d37.64600974364457!3d55.76920821803411!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a63664af129%3A0x32043f062d12723a!2z0JzRj9GB0L3QuNGG0LrQuNC5INC_0YAt0LQsIDMg0YHRgtGA0L7QtdC90LjQtSAxLCDQnNC-0YHQutCy0LAsIDEwNzA3OA!5e0!3m2!1sru!2sru!4v1579521728912!5m2!1sru!2sru" width="100%" height="630" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+		<div class="footer__info">
+			<address class="footer__address">Москва, Мясницкий проезд, д.3с1</address>
+			<a class="footer__phone" href="tel:84999228974">8 (499) 922-89-74</a>
+			<div class="footer__social">
+				<a class="footer__social-item" href="#">
+					<span class="icon-facebook"></span>
+				</a>
+				<a class="footer__social-item" href="#">
+					<span class="icon-instagram"></span>
+				</a>
+				<a class="footer__social-item" href="#">
+					<span class="icon-pinterest2"></span>
+				</a>
+			</div>
+		</div>
+	</footer>
+
 	
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
