--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
 				</div>
 				<div class="header__contacts">
 					<a href="tel:+74999228974" class="header__phone">+7 (499) 922-89-74</a>
-					<button class="btn">заказать звонок</button>
+					<button data-modal="consultation" class="btn">заказать звонок</button>
 				</div>
 			</header>
 			<div class="promo__wrapper">
@@ -46,7 +46,7 @@
 						Ответим на все вопросы
 					</div>
 				</div>
-				<button class="btn btn_main">заказать кОНСУЛЬТАЦИЮ</button>
+				<button data-modal="consultation" class="btn btn_main">заказать кОНСУЛЬТАЦИЮ</button>
 				<div class="promo__link">
 					или
 					<a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
@@ -539,6 +539,51 @@
 			</div>
 		</div>
 	</footer>
+
+	<div class="overlay">
+		<div class="modal" id="consultation">
+			<div class="modal__close">&times;</div>
+			<div class="modal__subtitle">
+				Просто заполните форму заявки
+			</div>
+			<div class="modal__descr">
+				и мы перезвоним вам в течении 10 минут
+			</div>
+			<form class="feed-form feed-form_mt25" action="#">
+				<input name="name" required type="text" placeholder="Ваше имя">
+				<input name="phone" required type="number" placeholder="Ваш телефон">
+				<input name="email" required type="email" placeholder="Ваш E-mail">
+				<button class="btn btn_submit">заказать консультацию</button>
+			</form>
+		</div>
+
+		<div class="modal" id="order">
+			<div class="modal__close">&times;</div>
+			<div class="modal__subtitle">
+				Ваш заказ:
+			</div>
+			<div class="modal__descr">
+				Пульсометр Polar FT1
+			</div>
+			<form class="feed-form feed-form_mt25" action="#">
+				<input name="name" required type="text" placeholder="Ваше имя">
+				<input name="phone" required type="number" placeholder="Ваш телефон">
+				<input name="email" required type="email" placeholder="Ваш E-mail">
+				<button class="btn btn_submit">купить</button>
+			</form>
+		</div>
+
+		<div class="modal modal_mini" id="thanks">
+			<div class="modal__close">&times;</div>
+			<div class="modal__subtitle">
+				Спасибо за вашу заявку!
+			</div>
+			<div class="modal__descr">
+				Наш менеджер свяжется с вами в ближайшее время!
+			</div>
+		</div>
+
+	</div>
 
 	
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
