add some validations for forms, also add phone mask

--- a/src/index.html
+++ b/src/index.html
@@ -104,9 +104,9 @@
 				Просто заполните форму заявки <br>
 				и мы перезвоним вам в течении 10 минут
 			</div>
-			<form class="feed-form" action="#">
+			<form id="consultation-form" class="feed-form" action="#">
 				<input name="name" required type="text" placeholder="Ваше имя">
-				<input name="phone" required type="number" placeholder="Ваш телефон">
+				<input name="phone" required placeholder="Ваш телефон">
 				<input name="email" required type="email" placeholder="Ваш E-mail">
 				<button class="btn btn_submit">заказать консультацию</button>
 			</form>
@@ -550,9 +550,9 @@
 				и мы перезвоним вам в течении 10 минут
 			</div>
 			<form class="feed-form feed-form_mt25" action="#">
-				<input name="name" required type="text" placeholder="Ваше имя">
-				<input name="phone" required type="number" placeholder="Ваш телефон">
-				<input name="email" required type="email" placeholder="Ваш E-mail">
+				<input name="name" type="text" placeholder="Ваше имя">
+				<input name="phone" placeholder="Ваш телефон">
+				<input name="email" type="email" placeholder="Ваш E-mail">
 				<button class="btn btn_submit">заказать консультацию</button>
 			</form>
 		</div>
@@ -567,7 +567,7 @@
 			</div>
 			<form class="feed-form feed-form_mt25" action="#">
 				<input name="name" required type="text" placeholder="Ваше имя">
-				<input name="phone" required type="number" placeholder="Ваш телефон">
+				<input name="phone" required placeholder="Ваш телефон">
 				<input name="email" required type="email" placeholder="Ваш E-mail">
 				<button class="btn btn_submit">купить</button>
 			</form>
@@ -588,6 +588,8 @@
 	
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script src="js/jquery.validate.min.js"></script>
+	<script src="js/jquery.maskedinput.min.js"></script>
 	<script src="js/script.js"></script>
 </body>
 </html>
