--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<section class="promo">
+	<section id="up" class="promo">
 		<div class="container">
 			<header class="header">
 				<a href="#" class="header__logo">
@@ -582,8 +582,11 @@
 				Наш менеджер свяжется с вами в ближайшее время!
 			</div>
 		</div>
-
 	</div>
+
+	<a class="pageup" href="#up">
+		<img src="icons/up.svg" alt="up">
+	</a>
 
 	
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
