--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
 					</div>
 				</div>
 				<div class="advantages__item">
-					<img src="icons/advantages/2.png" alt="heart" class="advantages__icon">
+					<img src="icons/advantages/2.png" alt="heart" class="advantages__icon advantages__icon_animated">
 					<div class="advantages__subtitle">
 						Заботимся о здоровье
 					</div>
