add animation for reviews

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 	<!-- <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon"> -->
 	<link rel="stylesheet" href="css/font.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/tiny-slider.css">
+	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -475,7 +476,7 @@
 		<div class="container">
 			<h2 class="title">отзывы клиентов</h2>
 			
-			<div class="reviews__item">
+			<div class="reviews__item fadeInUp wow" data-wow-duration="2s" data-wow-delay="1s" >
 				<img class="reviews__img" src="img/reviews/1.png" alt="Ирина Иванченко">
 				<div class="reviews__text">
 					<div class="reviews__header">Ирина Иванченко</div>
@@ -491,7 +492,7 @@
 				</div>
 			</div>
 
-			<div class="reviews__item">
+			<div class="reviews__item fadeInUp wow" data-wow-duration="2s" data-wow-delay="1s">
 				<img class="reviews__img" src="img/reviews/2.png" alt="Иван Сёмочкин">
 				<div class="reviews__text">
 					<div class="reviews__header">Иван Сёмочкин</div>
@@ -505,7 +506,7 @@
 				</div>
 			</div>
 
-			<div class="reviews__item">
+			<div class="reviews__item fadeInUp wow" data-wow-duration="2s" data-wow-delay="1s">
 				<img class="reviews__img" src="img/reviews/3.png" alt="Юлия Дашкина">
 				<div class="reviews__text">
 					<div class="reviews__header">Юлия Дашкина</div>
@@ -593,6 +594,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="js/jquery.validate.min.js"></script>
 	<script src="js/jquery.maskedinput.min.js"></script>
+	<script src="js/wow.min.js"></script>
 	<script src="js/script.js"></script>
 </body>
 </html>
